--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,1 +1,30 @@
 @import "tailwindcss";
+
+@import "./utility.css";
+@import "./styles.css" layer(base);
+
+
+
+@theme {
+	--color-theme-primary: oklch(0.79 0.1254 233.02);		/* #5cc9ff */
+	--color-theme-dark: oklch(0.62 0.1254 233.02);
+	--color-theme-light: oklch(0.88 0.1254 233.02);
+
+	--color-theme-text-light: theme(--color-neutral-200);
+	--color-theme-text-light-sub: theme(--color-neutral-500);
+	--color-theme-text-dark: theme(--color-neutral-800);
+	--color-theme-text-dark-sub: theme(--color-neutral-500);
+
+	--color-theme-bg-light: theme(--color-neutral-100);
+	--color-theme-bg-light-sub: theme(--color-neutral-200);
+	--color-theme-bg-dark: color-mix(in oklab, theme(--color-neutral-900) 98%, blue);
+	--color-theme-bg-dark-sub: color-mix(in oklab, var(--color-theme-bg-dark) 95%, white);
+}
+
+@custom-variant hover {
+	&:hover {
+		@media (hover: hover) and (pointer: fine) {
+			@slot;
+		}
+	}
+}
