--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -11,14 +11,17 @@
 } main {
 	@apply flex-1;
 } * {
-	cursor: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIuOHJlbSIgaGVpZ2h0PSIuOHJlbSIgZmlsbD0iIzVjYzlmZiIgc3Ryb2tlPSJibGFjayI+PGNpcmNsZSBjeD0iLjRyZW0iIGN5PSIuNHJlbSIgcj0iLjRyZW0iLz48L3N2Zz4=) 6 6, auto !important;
+	cursor: url("/cursor.svg") 6 6, auto !important;
 }
 
 
 
 a, button {
-	@apply cursor-pointer transition-colors;
+	@apply cursor-pointer transition-[color,text-shadow];
 	@apply hover:text-theme-primary [&.active]:text-theme-primary;
+	@apply hover:textBorder-transparent [&.active]:textBorder-transparent;
+} :where(a, button).link-primary, .link-primary :where(a, button) {
+	@apply text-theme-primary hover:text-theme-dark [&.active]:text-theme-dark;
 }
 
 
