--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -23,7 +23,12 @@ a, button {
 } :where(a, button).link-primary, .link-primary :where(a, button) {
 	@apply text-theme-primary hover:text-theme-dark [&.active]:text-theme-dark;
 } section {
-	--section-px: calc(var(--spacing) * 12);
+	--section-px: calc(var(--spacing) * 8);
+
+	@media (width >= 48rem) {
+		--section-px: calc(var(--spacing) * 16);
+	}
+
 	@apply px-(--section-px) font-semibold;
 
 	.title {
