--- a/src/styles/swiper.css
+++ b/src/styles/swiper.css
@@ -1,4 +1,5 @@
 @import "swiper/css";
+@import "swiper/css/a11y";
 @import "swiper/css/effect-fade";
 @import "swiper/css/navigation";
 @import "swiper/css/pagination";
