--- a/src/styles/swiper.css
+++ b/src/styles/swiper.css
@@ -1,6 +1,7 @@
 @import "swiper/css";
 @import "swiper/css/a11y";
 @import "swiper/css/effect-fade";
+@import "swiper/css/effect-cards";
 @import "swiper/css/navigation";
 @import "swiper/css/pagination";
 
